[gd_scene load_steps=6 format=3 uid="uid://d04vf67jvbuq5"]

[ext_resource type="Script" uid="uid://cehtk0i1at3y4" path="res://scripts/ui/progress_bar_with_threshold.gd" id="1_tlbrf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tlbrf"]
bg_color = Color(0, 0, 0, 0.752941)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clu2m"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0bl7"]
bg_color = Color(1, 1, 1, 0)
border_width_right = 8
border_color = Color(1, 1, 1, 1)
border_blend = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u4uox"]

[node name="ProgressBarWithThreshold" type="Panel"]
clip_children = 2
clip_contents = true
offset_right = 256.0
offset_bottom = 48.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tlbrf")
script = ExtResource("1_tlbrf")
progress_ratio = 1.0
threshold_ratio = 1.0
below_threshold_modulate = Color(0.5, 0.5, 0.5, 1)
above_threshold_modulate = Color(0.45, 0.6, 0.45, 1)
threshold_modulate = Color(1, 1, 1, 0.752941)

[node name="ProgressBar" type="Panel" parent="."]
modulate = Color(0.45, 0.6, 0.45, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_clu2m")

[node name="ThresholdBar" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.752941)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j0bl7")

[node name="Label" type="Label" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_u4uox")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1
